--- a/all/themes/jjamerson_lb/stylesheets/classreserves.css
+++ b/all/themes/jjamerson_lb/stylesheets/classreserves.css
@@ -8,3 +8,4 @@ center > .container{margin-bottom:24px;}
 .region-emergency-bar {background-color: #fff;top:0px;}
 .region-emergency-bar .container{margin-left: 0;}
 #block-block-8 .sub-title{bottom:4px;}
+.region-emergency-bar {background-color: #fff;top:0px;}
