CSS #bcm-lib-header min-height applied to hold body content position

--- a/all/themes/jjamerson_lb/stylesheets/ask.library.berklee.edu.css
+++ b/all/themes/jjamerson_lb/stylesheets/ask.library.berklee.edu.css
@@ -1,4 +1,5 @@
 /* ask.library.berklee.edu specific CSS */
+#bcm-lib-header{min-height:158px;}
 .navbar-form .s-la-content-search-query, .navbar-form .s-la-content-search-query{
 	height:34px;
 	margin-top:10px;
