--- a/all/themes/jjamerson_lb/stylesheets/catalog.berklee.edu.css
+++ b/all/themes/jjamerson_lb/stylesheets/catalog.berklee.edu.css
@@ -1,4 +1,5 @@
 /* catalog.berklee.edu specific CSS */
+#bcm-lib-header{min-height:138px;}
 #footer{margin-left:0;}
 a.opac-button-header:hover,.opac-button-header{border:none;background-color: transparent;box-shadow:none;}
 /* a.opac-button-header:hover,a.opac-button:hover,.opac-button-header,.opac-button{border:none;background-color: transparent;box-shadow:none;} */
