--- a/all/themes/jjamerson_lb/stylesheets/guides.library.berklee.edu.css
+++ b/all/themes/jjamerson_lb/stylesheets/guides.library.berklee.edu.css
@@ -1,17 +1,60 @@
 /* Libguide site specific CSS */
-#bcm-lib-header{min-height:158px;}
-@media (max-width: 767px){
-	#bcm-lib-header {height: 60px;}
-	#s-lib-public-header,	#s-lib-public-nav, #s-lib-public-main{padding-left: 1%; padding-right: 1%;}
-}
-@media (min-width: 768px){
-	.region-top-nav .block-menu.campus-tools .content nav{left:-242px;}
-	.region-top-nav .block-menu.campus-tools h3{width:38px;}
-}
-.region-emergency-bar {background-color: #fff;top:0px;}
-
 /*
 body > div.container ul {list-style: initial; padding-left: 20px;}
 body > div.container ol {list-style: decimal; padding-left: 20px;}
 */
 section.region-off-screen-sidebar .container{padding-left:0; padding-right:0}
+input#s-lg-guide-search{min-height:34px;}
+.region-emergency-bar {background-color: #fff;top:0px;}
+#bodyContent .image{float:left;}
+#bodyContent table tbody td{vertical-align:top;padding-left:3px;}
+#bodyContent table tbody td table tr:nth-child(2) td:nth-child(2){padding-left:10px;padding-right:5px;padding-bottom:5px;}
+/* #bodyContent #toc{margin-left:10px; margin-bottom:15px;} */
+/* #bodyContent #toc ul li{color:#fff;cursor:default;background-color:#577CBE;border:1px solid transparent;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;border-bottom-color:transparent;font-weight:bold;text-align:center;margin-bottom:5px;margin-top:5px;padding:5px 15px;} */
+/*
+#bodyContent #toc ul li a{color:#fff;}
+#bodyContent #toc ul li:hover{background-color:#70A1EB;}
+*/
+#bodyContent h2{font-weight:bold;color: #ccc;font-size:2em;padding: 8px 0px;}
+
+/*
+#s-lg-content-18496595{width:50%;}
+#s-lg-content-18496640{float:right;margin-top:-50PX;}
+*/
+/* specific to the page http://guides.library.berklee.edu/c.php?g=416769 */
+/* #s-lg-content-17594728 li{display: inline-block;} */
+/* END specific to the page http://guides.library.berklee.edu/c.php?g=416769 */
+#bodyContent table table{border-top: 1px dashed #aaa; margin-top: 1em; padding-top: 1em; width:100%;}
+#bodyContent table table td{padding-top: 0.5em;}
+#s-lg-guide-tabs .s-lg-boxnav{margin-left: 0px;}
+#bodyContent table tbody td:nth-child(2){padding-left:15px;}
+#bodyContent .toclevel-1{padding: 6PX 10PX;;border-top: 1px dashed #aaa; width:100%}
+#bodyContent h2{padding-top: 50px;} 
+#bodyContent h3{padding-top: 50px;font-size: 1.5em; color: #aaa;}
+#bodyContent .toclevel-1 .toclevel-2{padding-left: 10px;}
+#bodyContent table tbody tr ul:nth-child(1){margin-bottom: -20PX;}
+#canvas_main h2{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 0.5em;}
+#rdetail_record_details{
+    color: red;
+}
+#canvas_main h2.rdetail_contents{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 0.5em;}
+@media (max-width: 380px){
+	#bodyContent h2{padding-top: 80px;}
+	#bodyContent h3{padding-top: 80px;}
+}
+@media (max-width: 767px){
+	#bcm-lib-header {height: 60px;}
+	#s-lib-public-header,	#s-lib-public-nav, #s-lib-public-main{padding-left: 1%; padding-right: 1%;}
+}
+@media (min-width: 768px){
+	#bcm-lib-header{min-height:158px;}
+	.region-top-nav .block-menu.campus-tools .content nav{left:-242px;}
+	.region-top-nav .block-menu.campus-tools h3{width:38px;}
+}
+
