--- a/tbc/bco.kohalibrary.com/bco.kohalibrary.com.css
+++ b/tbc/bco.kohalibrary.com/bco.kohalibrary.com.css
@@ -1,53 +1,214 @@
-/* / Discovey Layer Editor: Header HTML */
-#app-body{
-padding: 0;
+/* opaccolorstylesheet */
+#opac-main-search label[for='masthead_search'] {
+    display: none;
 }
-#topbar .usercontent{
-  padding-top: 4px;
-  background-color: #001C37;
+
+#opac-main-search #libraryname {
+    min-width: 310px;
+    min-height: 40px;
+    background-size: 310px;
+    background-repeat: no-repeat;
+    margin-left: 15px;
 }
-#masthead{
-border-radius: 0;
-background-color: #001C37;
-margin-bottom: 0.5em;
+
+#header-wrapper,#opac-main-search {
+    background-color: #005487 !important;
+    border-top:0; border-bottom:0;
 }
-#masthead-logo img{
-  width: 120px;
-  max-width: 120px;
-  height: 40px;
+
+.ft {
+    margin-top: 15px
 }
-#masthead nav a{
- color: white;
+
+.ft #ft a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: normal;
 }
-#masthead nav a:hover{
- color: #444;
+
+.ft #ft a:hover {
+    text-decoration: underline;
 }
-#masthead form{
-  margin-bottom: 0;
+
+.ft #ft {
+    background-color: #005487;
+    margin-top: 15px margin: auto;
+    text-align: center;
+    padding: 50px 10px;
+    font-size: 14px;
+    color: #fff;
 }
-#masthead .logo-cnt{
-  padding: .8em;
-  width: 124px;
+
+#doc,
+#doc2,
+#doc3,
+#doc4,
+.yui-t1,
+.yui-t2,
+.yui-t3,
+.yui-t4,
+.yui-t5,
+.yui-t6,
+.yui-t7 {
+    margin: 0 0;
 }
-#masthead .mastsearch-cnt{
-  width: 600px;
+
+#fluid {
+    margin-top: 0;
+    display: inline-block;
+    margin-left: 1em;
 }
-#masthead .cartlist-cnt{
-  width: 200px;
+
+#fluid #listsmenulink,
+#fluid #searchsubmit {
+    background-image: linear-gradient(to bottom, #7FC6BC 0, #4BB5C1 100%);
+    border-color: #245580;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    margin-left: 1em;
 }
-#searchform button{
-margin-bottom: 10px;
+
+#cartmenulink *,
+#listsmenulink * {
+    background-image: none;
 }
-@media (min-width: 767px) {
-  #searchform input[name="q"]{
-    width: 26em;
-  }
-  #masthead ul{
-    margin-bottom: .6em;
-    margin-left:7em;
-  }
+
+#opac-main-search form {
+    display: inline-block;
 }
-footer{
-background-color: #001C37;
+
+#opac-main-search #searchform #transl1 {
+    display: block;
+    width: 100%;
+    height: 15px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
-/* / Discovey Layer Editor: Header HTML */
+
+#opac-main-search #searchform #masthead_search {
+    height: 29px;
+    margin: 0 8px 0 0;
+    padding: 0 12px;
+    display: block;
+    width: 100%;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+#opac-main-search #searchform #masthead_search {
+    margin-top: 0
+}
+
+#moresearches{
+	text-transform: uppercase;
+	font-size: 14px;
+}
+
+#moresearches > span{display:none;}
+#moresearches a{display:inline-block;  padding: 7px 8px 14px 8px;}
+#moresearches a:active{
+	font-weight: 700;
+  font-size: 105%;
+}
+#moresearches a:link,
+#moresearches a:visited{
+	color:#fff;
+}
+
+
+legend {
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin-bottom: 20px;
+  font-size: 21px;
+  line-height: inherit;
+  color: #333;
+  border: 0;
+  border-bottom: 1px solid #e5e5e5;
+}
+legend {
+  padding: 0;
+  border: 0;
+}
+
+
+fieldset {
+  min-width: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+fieldset {
+  padding: .35em .625em .75em;
+  margin: 0 2px;
+  border: 1px solid silver;
+}
+
+#bd>form{display:block;}
+#bd>form .container{margin-top: 1em;margin-bottom: 1em;}
+#bd>form,#yui-main {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 768px){
+	#bd>form,#yui-main {
+	  width: 750px;
+	}
+}
+@media (min-width: 992px){
+	#bd>form,#yui-main {
+	  width: 970px;
+	}
+}
+@media (min-width: 1200px){
+	#bd>form,#yui-main {
+	  width: 1170px;
+	}
+}
