--- a/all/themes/jjamerson_lb/stylesheets/guides.library.berklee.edu.css
+++ b/all/themes/jjamerson_lb/stylesheets/guides.library.berklee.edu.css
@@ -33,6 +33,7 @@ input#s-lg-guide-search{min-height:34px;}
 #bodyContent h3{padding-top: 50px;font-size: 1.5em; color: #aaa;}
 #bodyContent .toclevel-1 .toclevel-2{padding-left: 10px;}
 #bodyContent table tbody tr ul:nth-child(1){margin-bottom: -20PX;}
+input#s-lg-az-search{height: 34px;}
 @media (max-width: 380px){
 	#bodyContent h2{padding-top: 80px;}
 	#bodyContent h3{padding-top: 80px;}
